fix NT auth module vulnerability https://github.com/OpenIdentityPlatform/OpenAM/issues/513
thanks  Aliz Hammond , at watchTowr 👍