@@ -92,6 +92,7 @@
     <commons-fileupload.version>1.4</commons-fileupload.version>
     <commons-io.version>2.8.0</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
+    <commons-text.version>1.9</commons-text.version>
     <commons-logging.version>1.1.3</commons-logging.version>
     <commons-logging-api.version>1.1</commons-logging-api.version>
     <!--         <esapiport.version>2013-12-04</esapiport.version> -->
@@ -315,6 +316,7 @@
           --add-opens java.base/java.util.concurrent=ALL-UNNAMED
           --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
           --add-opens java.base/java.nio=ALL-UNNAMED
+          --add-opens java.logging/java.util.logging=ALL-UNNAMED
 
           --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
           --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
@@ -1207,6 +1209,12 @@
         <artifactId>commons-logging-api</artifactId>
         <version>${commons-logging-api.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-text</artifactId>
+        <version>${commons-text.version}</version>
+      </dependency>
+
       <!-- Mozilla Rhino Javascript engine -->
       <dependency>
         <groupId>org.mozilla</groupId>
